chore(kc): update to 26.4.0
Signed-off-by: opdt <IT-Systemhaus.SEP5-Online-Team-OPDT@arbeitsagentur.de>